--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,3 +23,23 @@ body {
     font-family: 'Noto Serif', serif;
     background-color: var(--white);
 }
+
+#header {
+    background-color: var(--red);
+    height: 7.5rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    line-height: 7.5rem;
+    color: var(--white);
+}
+
+#logo {
+    margin: 0 2rem 0 1rem;
+}
+
+.smarticus {
+    font-size: 2rem;
+    margin: 0;
+}
