--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,5 +46,8 @@ body {
 
 #main-catagory-grid {
     display: grid;
-    
+    grid-template-columns: repeat(1, 1fr);
+    grid-auto-rows: 15rem;
+    font-size: 3rem;
+
 }
