--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,5 +55,12 @@ body {
     grid-template-columns: repeat(1, 1fr);
     grid-auto-rows: 15rem;
     font-size: 3rem;
+}
 
+.grid-even {
+    background-color: var(--grey);
+    color: var(--white);
+    flex-direction: row-reverse;
+    justify-content: space-evenly;
+    cursor: pointer;
 }
