Add style to grid-odd in main-catagory-grid in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,3 +64,8 @@ body {
     justify-content: space-evenly;
     cursor: pointer;
 }
+
+.grid-odd {
+    justify-content: space-evenly;
+    cursor: pointer;
+}
