--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,3 +69,9 @@ body {
     justify-content: space-evenly;
     cursor: pointer;
 }
+
+#welcome-person {
+    background-color: var(--red);
+    color: var(--white);
+    font-size: 2.5rem;
+}
