--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,10 @@ body {
 }
 
 #main-catagory-grid {
-    display: grid;
+    
+    /*Change to display grid in script.js*/
+    
+    display: none;
     grid-template-columns: repeat(1, 1fr);
     grid-auto-rows: 15rem;
     font-size: 3rem;
