--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,3 +101,15 @@ body {
 
 /* 5. User form */ 
 
+#user {
+    flex-direction: column;
+    justify-content: space-evenly;
+    background-color: var(--red);
+    color: var(--white);
+    height: 100vh;
+    width: 100%;
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
