Add styling to #user-form in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,3 +115,9 @@ body {
     padding: 2rem;
     text-align: center;
 }
+
+#user-form {
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 60%;
+}
