--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,5 +132,10 @@ body {
     color: var(--grey);
     width: 80%;
     padding: 2px;
-    font-size: 2.5rem;
+    font-size:2.5rem;
+}
+
+#user-name:focus {
+    background-color: var(--grey);
+    color: var(--white);
 }
