--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,8 @@ body {
 /* 5. User form */ 
 
 #user {
+    /* Change to display inline in script */
+    display: none;
     flex-direction: column;
     justify-content: space-evenly;
     background-color: var(--red);
