Add style to #questions in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
     3. Header
     4. Main Catagories Grid
     5. User form
+    6. Questions
 */
 
 
@@ -180,4 +181,17 @@ body {
     100% {
         top: 0px;
     }
+}
+
+
+/* 6. Questions */ 
+
+#questions {
+    height: 100vh;
+    width: 100%;
+    background-color: var(--grey);
+    color: var(--white);
+    flex-direction: column;
+    justify-content: space-evenly;
+    position: fixed;
 }
