--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,3 +204,13 @@ body {
     cursor: pointer;
 }
 
+#quiz-catagory  {
+    color: var(--white);
+    font-size: 1.5rem;
+    text-align: left;
+    margin: 0 0 0 1rem;
+    text-decoration: underline;
+    position: absolute;
+    top: 2.5rem;
+    left: 1.5rem;
+}
