Add style to #score in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,3 +214,10 @@ body {
     top: 2.5rem;
     left: 1.5rem;
 }
+
+#score {
+    position: absolute;
+    top: 5rem;
+    left: 2.5rem;
+    font-size: 2rem;
+}
