Change padding style on #questions in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,6 +194,7 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     position: fixed;
+    padding: 4rem 1rem ;
 }
 
 #close {
