Change style to #questions for better screen fit

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,8 +193,10 @@ body {
     color: var(--white);
     flex-direction: column;
     justify-content: space-evenly;
-    position: relative;
-    padding: 4rem 1rem ;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 8rem 1rem 2rem 1rem;
 }
 
 #close {
