--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,6 +187,9 @@ body {
 /* 6. Questions */ 
 
 #questions {
+
+    /* Change to display inline in JS */
+    display: none;
     height: 100vh;
     width: 100%;
     background-color: var(--grey);
