--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,13 +98,12 @@ body {
     background-color: var(--red);
     color: var(--white);
     font-size: 2.5rem;
+    flex-direction: column;
 }
 
 /* 5. User form */ 
 
 #user {
-    /* Change to display inline in script */
-    display: none;
     flex-direction: column;
     justify-content: space-evenly;
     background-color: var(--red);
