Change margin style to .options-container in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,7 +240,7 @@ body {
     border: 1px solid var(--red);
     width: 80%;
     height: 6rem;
-    margin: auto;
+    margin: 3rem auto;
 }
 
 .option {
