Change margin on options-container

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,7 +239,7 @@ body {
     border: 1px solid var(--red);
     width: 80%;
     height: 6rem;
-    margin: 3rem auto;
+    margin: auto;
 }
 
 .option {
