Change variables to const and adjust layout in script.js

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,7 +201,7 @@ body {
     padding: 8rem 1rem 2rem 1rem;
 }
 
-#close {
+#close-questions {
     position: absolute;
     top: 1rem;
     right: 1.5rem;
