--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,9 @@
     2. Center All
     3. Header
     4. Main Catagories Grid
-    5. User form
+    5. User Form
     6. Questions
+    7. Page Loader
 */
 
 
@@ -98,7 +99,7 @@ body {
     flex-direction: column;
 }
 
-/* 5. User form */ 
+/* 5. User Form */ 
 
 #user {
     flex-direction: column;
@@ -253,4 +254,16 @@ body {
     color: var(--white);
     padding: 1.5rem;
     margin: 0;
+}
+
+
+/* 7. Page Loader */
+
+.spin-loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: var(--white);
 }
