--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,7 +266,7 @@ body {
     left: 0;
     height: 100%;
     width: 100%;
-    background-color: var(--white);
+    background-color: var(--grey);
 }
 
 .spin-loader-vanish{
