--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,6 +256,8 @@ body {
     color: var(--white);
     padding: 1.5rem;
     margin: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .option-correct {
