--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
     5. User Form
     6. Questions
     7. Page Loader
+    8. Results Screen
 */
 
 
@@ -292,3 +293,5 @@ body {
         visibility: hidden;
     }
 }
+
+/* 8. Results Screen */
