--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -298,7 +298,7 @@ body {
 
 #results-screen {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: var(--red);
     color: var(--white);
     display: none;
