Add media query for >=768px for #main-catagory-grid

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -317,3 +317,10 @@ body {
 }
 
 
+/*  >=768px (Tablet) */
+
+@media (min-width: 768px) {
+    #main-catagory-grid {
+        grid-template-columns: 1fr 1fr;
+    }
+}
