Add grid-auto-rows to  media query for >=768px for #main-catagory-grid

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -322,6 +322,7 @@ body {
 @media (min-width: 768px) {
     #main-catagory-grid {
         grid-template-columns: 1fr 1fr;
+        grid-auto-rows: 24rem;
     }
 
     .catagory-grid-item1 {
