Add comment for >=992px media query

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -334,6 +334,8 @@ body {
     }
 }
 
+/* >=992px (Desktop) */
+
 @media (min-width: 992px) {
     #main-catagory-grid {
         grid-template-columns: 1fr 1fr 1fr;
