Add media query for >=992px for .catagory-grid-item1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -340,6 +340,10 @@ body {
     #main-catagory-grid {
         grid-template-columns: 1fr 1fr 1fr;
         grid-auto-rows: 24rem;
-    }  
+    } 
+    
+    .catagory-grid-item1 {
+        grid-area: 1 / 1 / 1 / span 3;
+    }
 
 }
