Add media query for >=992px for .catagory-grid-item4

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -346,4 +346,8 @@ body {
         grid-area: 1 / 1 / 1 / span 3;
     }
 
+    .catagory-grid-item4 {
+        grid-area: 2 / 3 / 3 / 4;
+    }
+
 }
