--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -355,7 +355,11 @@ body {
     }
 
     #user-form label {
-        font-size: 2rem;;
+        font-size: 2.5rem;;
+    }
+
+    #user h2 {
+        font-size: 4rem;
     }
 
 }
