--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -366,3 +366,12 @@ body {
         font-size: 4rem;
     }
 }
+
+
+/* >=1200px (xl - Desktop) */
+
+@media (min-width: 1200px) {
+    #quiz-catagory {
+        font-size: 2.5rem;
+    }
+}
