--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -385,7 +385,12 @@ body {
         font-size: 2rem;
     }
 
-    #question {
+    #question, #close-questions {
         font-size: 2.5rem;
+    }
+
+    #close-questions {
+        right: 4rem;
+        top: 2rem;
     }
 }
