--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -350,6 +350,10 @@ body {
         width: 60%;
     }
 
+    .options-container:hover {
+    box-shadow: 0px 0px 15px 5px rgba(159, 35, 35, 0.5);
+    }
+
     #user-form label {
         font-size: 2.5rem;;
     }
