--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -319,6 +319,7 @@ body {
     #main-catagory-grid {
         grid-template-columns: 1fr 1fr;
         grid-auto-rows: 24rem;
+        height: 86.2rem;
     }
 
     .catagory-grid-item1 {
