--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,8 +52,13 @@ body {
 /* 3. Header */
 
 #header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
     background-color: var(--red);
     height: 7.5rem;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -325,6 +330,8 @@ body {
         grid-template-columns: 1fr 1fr;
         grid-auto-rows: auto;
     }
+
+
 
     .catagory-grid-item1 {
         grid-area: 1 / 1 / 1 / span 2;
