--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,7 @@ body {
     grid-template-columns: repeat(1, 1fr);
     grid-auto-rows: 15rem;
     font-size: 3rem;
+    margin-top: 6rem;
 }
 
 .grid-even {
