Change display property of #header in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ body {
     background-color: var(--red);
     height: 7.5rem;
     width: 100%;
-    display: flex;
+    display: none;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
