--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -285,6 +285,9 @@ body {
 /* 7. Page Loader */
 
 .spin-loader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: fixed;
     top: 0;
     left: 0;
