--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -409,6 +409,10 @@ body {
         font-size: 2.5rem;
     }
 
+    #question-number {
+        top: 6rem;
+    }
+
     #close-questions {
         right: 4rem;
         top: 2rem;
