--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ body {
 
 /* 4. Main Catagories Grid */
 
-#main-catagory-grid {
+#main-category-grid {
     display: none;
     grid-template-columns: repeat(1, 1fr);
     grid-auto-rows: 15rem;
@@ -214,7 +214,7 @@ body {
     cursor: pointer;
 }
 
-#quiz-catagory  {
+#quiz-category  {
     color: var(--white);
     font-size: 1.5rem;
     text-align: left;
@@ -332,7 +332,7 @@ body {
 /*  >=768px (Tablet) */
 
 @media (min-width: 768px) {
-    #main-catagory-grid {
+    #main-category-grid {
         position: absolute;
         top: 0;
         left: 0;
@@ -342,11 +342,11 @@ body {
         grid-auto-rows: auto;
     }
 
-    .catagory-grid-item1 {
+    .category-grid-item1 {
         grid-area: 1 / 1 / 1 / span 2;
     }
 
-    .catagory-grid-item4 {
+    .category-grid-item4 {
         grid-area: 3 / 2 / 4 / 3;
     }
 }
@@ -358,11 +358,11 @@ body {
         grid-template-columns: 1fr 1fr 1fr;
     } 
     
-    .catagory-grid-item1 {
+    .category-grid-item1 {
         grid-area: 1 / 1 / 1 / span 3;
     }
 
-    .catagory-grid-item4 {
+    .category-grid-item4 {
         grid-area: 2 / 3 / 3 / 4;
     }
 
@@ -427,7 +427,7 @@ body {
         font-size: 3rem;
     }
 
-    #main-catagory-grid div p, #main-catagory-grid div i {
+    #main-category-grid div p, #main-category-grid div i {
         font-size: 4rem;
     }
 }
