Add style to .diff-label in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,6 +107,11 @@ body {
     flex-direction: column;
 }
 
+.diff-label {
+    font-size: 2rem;
+    font-weight: 100;
+}
+
 /* 5. User Form */ 
 
 #user {
