--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,9 +107,14 @@ body {
     flex-direction: column;
 }
 
+#difficulty {
+    justify-content: space-evenly;
+}
+
 .diff-label {
     font-size: 2rem;
     font-weight: 100;
+    margin: 0 2rem 0 1rem;
 }
 
 /* 5. User Form */ 
