Add justify-content to #welcome-person in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,6 +105,7 @@ body {
     color: var(--white);
     font-size: 2.5rem;
     flex-direction: column;
+    justify-content: space-evenly;
 }
 
 #difficulty {
