--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,12 +113,18 @@ body {
     width: 100%;
 }
 
+#difficulty input {
+    display: none;
+}
 
 .diff-label {
     font-size: 2rem;
     font-weight: 100;
     margin: 0 2rem 0 1rem;
+    cursor: pointer;
+    background-color: var(--grey);
 }
+
 
 /* 5. User Form */ 
 
