--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,9 +125,14 @@ body {
 .diff-label {
     font-size: 2rem;
     font-weight: 100;
-    margin: 0 2rem 0 1rem;
+    margin: auto;
     cursor: pointer;
     background-color: var(--grey);
+    color: var(--white);
+    text-align: center;
+    width: 8rem;
+    padding: 1rem;
+    border-radius: 5px;
 }
 
 
