--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,8 +133,12 @@ body {
     width: 8rem;
     padding: 1rem;
     border-radius: 5px;
+    position: relative;
 }
 
+#difficulty input[type='radio']:checked+label {
+    box-shadow: 0px 0px 20px 4px rgba(245, 246, 244, 0.63);
+}
 
 /* 5. User Form */ 
 
