--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -400,6 +400,7 @@ body {
 @media (min-width: 992px) {
     #main-category-grid {
         grid-template-columns: 1fr 1fr 1fr;
+        height: 88vh;
     } 
     
     .category-grid-item1 {
