--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -435,6 +435,14 @@ body {
     #question {
         padding: 5rem 6rem;
     }
+
+    .diff-label {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 6rem;
+        width: 15rem;
+    }
 }
 
 
