Add style to developer-name in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -336,6 +336,18 @@ body {
     background-color: var(--grey);
 }
 
+#spin-loader i {
+    font-weight: 100;
+}
+
+.developer-name {
+    color: var(--white);
+    font-size: 2rem;
+    position: fixed;
+    bottom: 2rem;
+    text-transform: uppercase;
+}
+
 .spin-loader-vanish{
     animation: vanish 1s forwards;
 }
