--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -336,6 +336,18 @@ body {
     background-color: var(--grey);
 }
 
+#developer-name {
+    position: fixed;
+    font-size: 1rem;
+    color: var(--white);
+    bottom: 0;
+    left: 0;
+    background-color: var(--red);
+    width: 100%;
+    height: 2rem;
+    margin: 0;
+}
+
 .developer-name {
     color: var(--white);
     font-size: 2rem;
