--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,7 @@ body {
     font-size: 1.6rem;
     height: 100vh;
     font-family: 'Noto Serif', serif;
+    font-weight: 400;
     background-color: var(--white);
 }
 
