--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,6 +203,10 @@ body {
     height: 60%;
 }
 
+#user-form label {
+    font-weight: 100;
+}
+
 #user-name {
     outline: none;
     background-color: var(--white);
