--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,6 +173,7 @@ body {
     padding: 1rem;
     border-radius: 5px;
     position: relative;
+    font-weight: 100;
 }
 
 #difficulty input[type='radio']:checked+label {
