--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,7 +243,7 @@ body {
     padding: 8rem 1rem 2rem 1rem;
 }
 
-#close-questions {
+#questions-menu {
     position: absolute;
     top: 1rem;
     right: 1.5rem;
