--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -395,6 +395,13 @@ body {
     justify-content: space-evenly;
 }
 
+#close-questions-screen-menu {
+    position: absolute;
+    top: 2rem;
+    right: 3rem;
+    font-size: 2rem;
+}
+
 /*  12. >=768px (Tablet) */
 
 @media (min-width: 768px) {
