Change x icon to 'Close Menu' in question-screen-menu in index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -396,7 +396,7 @@ body {
 }
 
 #close-questions-screen-menu {
-    position: absolute;
+    position: fixed;
     top: 2rem;
     right: 3rem;
     font-size: 2rem;
