--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,12 +58,16 @@ body {
     background-color: var(--white);
 }
 
-/* 2. Center All */
+/* 2. General */
 
 .center-all {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.pointer {
+    cursor: pointer;
 }
 
 /* 3. Buttons */
@@ -160,7 +164,6 @@ body {
     position: fixed;
     top: 7rem;
     left: 0;
-
 }
 
 #difficulty input {
