--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ body {
     cursor: pointer;
 }
 
-/* 3. Buttons */
+/* 3. Buttons and Checkbox */
 
 .round-button {
     height: 6rem;
@@ -88,6 +88,29 @@ body {
 
 .round-button:hover {
     animation: 1s bounce forwards;
+}
+
+/* 3.1 Difficulty buttons */ 
+
+#difficulty-buttons {
+    display: none;
+}
+
+.diff-label {
+    font-size: 2rem;
+    margin: auto;
+    background-color: var(--grey);
+    color: var(--white);
+    text-align: center;
+    width: 8rem;
+    padding: 1rem;
+    border-radius: 5px;
+    position: relative;
+    font-weight: 100;
+}
+
+#difficulty input[type='radio']:checked+label {
+    box-shadow: 0px 0px 20px 4px rgba(245, 246, 244, 0.63);
 }
 
 /* 4. Header */
@@ -147,11 +170,7 @@ body {
     justify-content: space-evenly;
 }
 
-/* 6. Difficulty buttons */ 
-
-#difficulty-buttons {
-    display: none;
-}
+/* 6. Difficulty section*/
 
 #difficulty {
     justify-content: space-evenly;
@@ -165,23 +184,6 @@ body {
 
 #difficulty input {
     display: none;
-}
-
-.diff-label {
-    font-size: 2rem;
-    margin: auto;
-    background-color: var(--grey);
-    color: var(--white);
-    text-align: center;
-    width: 8rem;
-    padding: 1rem;
-    border-radius: 5px;
-    position: relative;
-    font-weight: 100;
-}
-
-#difficulty input[type='radio']:checked+label {
-    box-shadow: 0px 0px 20px 4px rgba(245, 246, 244, 0.63);
 }
 
 /* 7. User Form */ 
