--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,15 +90,8 @@ body {
     animation: 1s bounce forwards;
 }
 
-/* 3.1 Difficulty buttons */ 
-
-#difficulty-buttons {
-    display: none;
-}
-
-.diff-label {
+.square-button {
     font-size: 2rem;
-    margin: auto;
     background-color: var(--grey);
     color: var(--white);
     text-align: center;
@@ -107,6 +100,17 @@ body {
     border-radius: 5px;
     position: relative;
     font-weight: 100;
+
+}
+
+/* 3.1 Difficulty buttons */ 
+
+#difficulty-buttons {
+    display: none;
+}
+
+.diff-label {
+    margin: auto;
 }
 
 #difficulty input[type='radio']:checked+label {
