Add box-shadow to round & square-button: hover in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,6 +88,7 @@ body {
 
 .round-button:hover, .square-button:hover {
     animation: 1s bounce forwards;
+    box-shadow: 0px 0px 20px 4px rgba(245, 246, 244, 0.63);
 }
 
 .square-button {
