--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,11 @@ body {
     font-weight: 100;
 }
 
+.menu-button {
+    width: 20rem;
+    margin: 0;
+}
+
 /* 3.1 Difficulty buttons */ 
 
 #difficulty-buttons {
