Change styling for #questions-menu in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,6 +259,8 @@ body {
     top: 1rem;
     right: 1.5rem;
     color: var(--white);
+    font-size: 2rem;
+    margin: 0;
 }
 
 #quiz-category  {
