--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -401,10 +401,14 @@ body {
     display: none;
     flex-direction: column;
     height: 100vh;
+    width: 100%;
     background-color: var(--red);
     color: var(--white);
     justify-content: space-evenly;
-    animation: fade-in 0.3s ease-in;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1000;
 }
 
 /*  12. >=768px (Tablet) */
