Add fade-in class and @keyframes to style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -574,12 +574,16 @@ body {
     }
 }
 
+.fade-in {
+    animation: fade-in 0.3s ease-in forwards;
+}
+
 @keyframes fade-in {
     0% {
-        opacity: 0;
+        right: -100vw;
     }
 
     100% {
-        opacity: 1;
+        right: 0;
     }
 }
