Add style to #close-questions-screen-menu in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -411,6 +411,13 @@ body {
     z-index: 1000;
 }
 
+#close-questions-screen-menu {
+    position: fixed;
+    top: 2rem;
+    right: 2rem;
+    font-size: 2rem;
+}
+
 /*  12. >=768px (Tablet) */
 
 @media (min-width: 768px) {
