--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -496,6 +496,10 @@ body {
     box-shadow: 0px 0px 15px 5px rgba(159, 35, 35, 0.5);
     }
 
+    #questions-menu {
+        font-size: 3rem;
+    }
+
 /* 13.4 Difficulty buttons */
     .diff-label {
         display: flex;
