Add styling to #question-number for >=992px media query in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -484,6 +484,11 @@ body {
     }
 
 /* 13.3 Questions Screen */
+    #question-number {
+        top: 10rem;
+        left: 17rem;
+    }
+
     #question {
         padding: 5rem 6rem;
     }
