Add styling to #score for >=992px media query in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -489,6 +489,11 @@ body {
         left: 17rem;
     }
 
+    #score {
+        top: 6rem;
+        left: auto;
+    }
+
     #question {
         padding: 5rem 6rem;
     }
