Add style to #quiz-category for >=992px media query in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -489,6 +489,12 @@ body {
         left: 17rem;
     }
 
+    #quiz-category {
+        font-size: 2rem;
+        top: 1rem;
+        left: auto;
+    }
+
     #score {
         top: 6rem;
         left: auto;
