Add style to #questions-menu in >=1200px media query in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -549,6 +549,10 @@ body {
         font-size: 2.5rem;
     }
 
+    #questions-menu {
+        right: 4rem;
+    }
+
     #close-questions {
         right: 4rem;
         top: 2rem;
