Change style of #question-number for >=992px media query in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -486,7 +486,7 @@ body {
 /* 13.3 Questions Screen */
     #question-number {
         top: 10rem;
-        left: 17rem;
+        right: auto;
     }
 
     #quiz-category {
