Add style to #close-questions-screen-menu for >=992px media query in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -516,6 +516,10 @@ body {
         font-size: 3rem;
     }
 
+    #close-questions-screen-menu {
+        right: 3rem;
+    }
+
 /* 13.4 Difficulty buttons */
     .diff-label {
         display: flex;
