Add style to #close-questions-screen-menu for >=992px media query in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -562,6 +562,10 @@ body {
         top: 2rem;
     }
 
+    #close-questions-screen-menu {
+        right: 4rem;
+    }
+
 /* 14.2 Results Screen */
     #results-screen h2 {
         font-size: 8rem;
