--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -549,17 +549,12 @@ body {
         font-size: 2rem;
     }
 
-    #question, #close-questions {
+    #question {
         font-size: 2.5rem;
     }
 
     #questions-menu {
         right: 4rem;
-    }
-
-    #close-questions {
-        right: 4rem;
-        top: 2rem;
     }
 
     #close-questions-screen-menu {
