Change comments in style.css to suit contents

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,28 +2,30 @@
 /*
     1. Global Styles
     2. Center All
-    3. Buttons
+    3. Buttons and Checkbox
+        3.1 Difficulty buttons
     4. Header
     5. Main Categories Grid
-    6. Difficulty buttons
+    6. Difficulty Section
     7. User Form
     8. Questions Screen
         8.1 Answer Options
     9. Page Loader
     10. Footer 
     11. Results Screen
-    12. >=768px (Tablet)
-        12.1 Main Category Grid
-    13. >=992px (Desktop) 
+    12. Question Screen Menu
+    13. >=768px (Tablet)
         13.1 Main Category Grid
-        13.2 User Form
-        13.3 Questions Screen
-        13.4 Difficulty buttons
-    14. >=1200px (xl - Desktop)
-        14.1 Questions Screen
-        14.2 Results Screen
-        14.3 Main Category Grid
-    15. Keyframes
+    14. >=992px (Desktop) 
+        14.1 Main Category Grid
+        14.2 User Form
+        14.3 Questions Screen
+        14.4 Difficulty buttons
+    15. >=1200px (xl - Desktop)
+        15.1 Questions Screen
+        15.2 Results Screen
+        15.3 Main Category Grid
+    16. Keyframes
 */
 
 
@@ -107,7 +109,7 @@ body {
     margin: 0;
 }
 
-/* 3.1 Difficulty buttons */ 
+/* 3.1 Difficulty Buttons */ 
 
 #difficulty-buttons {
     display: none;
@@ -179,7 +181,7 @@ body {
     justify-content: space-evenly;
 }
 
-/* 6. Difficulty section*/
+/* 6. Difficulty Section*/
 
 #difficulty {
     justify-content: space-evenly;
@@ -419,11 +421,11 @@ body {
     font-size: 2rem;
 }
 
-/*  12. >=768px (Tablet) */
+/*  13. >=768px (Tablet) */
 
 @media (min-width: 768px) {
     
-/* 12.1 Main Category Grid */
+/* 13.1 Main Category Grid */
     #main-category-grid {
         position: absolute;
         top: 0;
@@ -452,11 +454,11 @@ body {
     }
 }
 
-/* 13. >=992px (Desktop) */
+/* 14. >=992px (Desktop) */
 
 @media (min-width: 992px) {
     
-/* 13.1 Main Category Grid */   
+/* 14.1 Main Category Grid */   
     #main-category-grid {
         grid-template-columns: 1fr 1fr 1fr;
         height: 83vh;
@@ -470,7 +472,7 @@ body {
         grid-area: 2 / 3 / 3 / 4;
     }
 
-/* 13.2 User Form */
+/* 14.2 User Form */
     #user-form label {
         font-size: 2.5rem;;
     }
@@ -483,7 +485,7 @@ body {
         font-size: 4rem;
     }
 
-/* 13.3 Questions Screen */
+/* 14.3 Questions Screen */
     #question-number {
         top: 10rem;
         right: auto;
@@ -520,7 +522,7 @@ body {
         right: 3rem;
     }
 
-/* 13.4 Difficulty buttons */
+/* 14.4 Difficulty buttons */
     .diff-label {
         display: flex;
         justify-content: center;
@@ -531,11 +533,11 @@ body {
 }
 
 
-/* 14. >=1200px (xl - Desktop) */
+/* 15. >=1200px (xl - Desktop) */
 
 @media (min-width: 1200px) {
 
-/* 14.1 Questions Screen */
+/* 15.1 Questions Screen */
     #quiz-category, #score {
         font-size: 2.5rem;
     }
@@ -561,7 +563,7 @@ body {
         right: 4rem;
     }
 
-/* 14.2 Results Screen */
+/* 15.2 Results Screen */
     #results-screen h2 {
         font-size: 8rem;
     }
@@ -570,67 +572,65 @@ body {
         font-size: 3rem;
     }
 
-/* 14.3 Main Category Grid */
+/* 15.3 Main Category Grid */
     #main-category-grid div p, #main-category-grid div i {
         font-size: 4rem;
     }
 }
 
-/* 15. Keyframes */
-
-@keyframes vanish {
-    100% {
-        opacity: 0;
-        visibility: hidden;
-    }
-}
-
-
-@keyframes bounce {
-    0% {
-        top: 0px;
-    }
-    20% {
-        top: 4px;
-    }
-    40% {
-        top: -2px;
-    }
-    60% {
-        top: 4px;
-    }
-    80% {
-        top: -2px;
-    }
-    100% {
-        top: 0px;
-    }
-}
-
-.fade-in {
-    animation: fade-in 0.3s ease-in forwards;
-}
-
-@keyframes fade-in {
-    0% {
-        right: -100vw;
+/* 16. Keyframes */
+    @keyframes vanish {
+        100% {
+            opacity: 0;
+            visibility: hidden;
+        }
     }
 
-    100% {
-        right: 0;
+    @keyframes bounce {
+        0% {
+            top: 0px;
+        }
+        20% {
+            top: 4px;
+        }
+        40% {
+            top: -2px;
+        }
+        60% {
+            top: 4px;
+        }
+        80% {
+            top: -2px;
+        }
+        100% {
+            top: 0px;
+        }
     }
-}
 
-.fade-out {
-    animation: fade-out 0.3s ease-in forwards;
-}
-
-@keyframes fade-out {
-    0% {
-        right: 0;
+    .fade-in {
+        animation: fade-in 0.3s ease-in forwards;
     }
 
-    100% {
-        right: -100vw;
+    @keyframes fade-in {
+        0% {
+            right: -100vw;
+        }
+
+        100% {
+            right: 0;
+        }
     }
-}
+
+    .fade-out {
+        animation: fade-out 0.3s ease-in forwards;
+    }
+
+    @keyframes fade-out {
+        0% {
+            right: 0;
+        }
+
+        100% {
+            right: -100vw;
+        }
+    }
